# BasketballStatsHunter

./: .gitignore  Class diagram (of sorts).drawio  DB.graphml  PlanetScale.txt  README.md  SCHEDULE-DAILY  TEMPNOTES.txt  TODO  WISHLIST  basketball_stats.db  brainstorm.txt  bucket.py  common.py  dump.sql  frontend.py  game.xlsx  games.json  games.jsonl  handy.py  hunter.js  hunter_gatherer.py  index.js  main.py  package-lock.json  package.json  pgs.py  plan.txt  project.py  pyproject.toml  requirements.txt  scratchpad.py  server.py  test datatables.html  test.py  test.xlsx  ui.py  uitest.py
HuntApp/: app.py  hunter_gatherer.py
HuntApp/PerGameStats/: pgs.py  test.py
HuntApp/PlayByPlays/: README.md  (+1 more)
PerGameStats/: BB.session.sql  README.md  common.py  core.py  main.py  pgs.py  pgs_helper.py  test.csv
PlayByPlays/: ActionMap.py  Game.py  GamePlayer.py  Play.py  PlayAction.py  README.md  Team.py  main.py  pbp_helper.py  plan.txt  process_html.py
base/: base.py
db/: DB.graphml  __init__.py  db_test.py
models/: Action.py  Game.py  Instance_Player_Game.py  Play.py  main.py
modules/: Action.py  Game.py  Instance_Team_Game.py
notes/: DB.graphml  Requirements.gdoc  breaking down data per page.txt  notes.txt
schemas/: helper.py  schemas.py
scraping/: Players.py  base.py  utilities.py
scripts/: README.md  db_init_staged.py  metabase.py
sh/: dump_ddl.sh
sql/: ddl.sql
statbucketdj/: README.md  manage.py
templates/: index.html
ts prototype/: filters.js  filters.ts  index.js  index.ts  package.json  test.js  test.ts
validation/: coercion.py  schemas.py
(+52 files in other folders)
