[project]
name = "statbucket-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.3",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "duckdb==1.2.0",
    "greenlet==3.2.1",
    "idna==3.10",
    "jsonlines==4.0.0",
    "lxml==5.3.1",
    "mysql-connector-python==8.0.28",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pathvalidate==3.2.3",
    "protobuf==5.29.3",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.38",
    "typer>=0.19.1",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
]
